--- a/app.json
+++ b/app.json
@@ -24,6 +24,13 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
+      "plugins": [
+        "expo-font"
+      ]
     }
   }
-}
+
